@@ -1,4 +1,5 @@
 0.8.0 - currently working on
+- [#4111] Fix: tx_oelib_List::sort needs to make the list dirty
 - [#4095] Fix: Wrong documentation comment for tx_oelib_ConfigurationRegistry::get
 - [#4125] Fix: Check all class_exists for the correct use of the autoload flag
 - [#4128] Change: Improve the exception text about missing subparts
